# croopor

./: .env.example  .gitignore  .goreleaser.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  PRODUCT.md  README.md  Taskfile.yml  app.go  app_other.go  app_windows.go  browser.go  deny.toml  dependency-policy.json  dev  dev.cmd  dev.ps1  go.mod  go.sum  main.go  toolchain.json  tsconfig.json  wails.json
apps/api/: Cargo.toml
apps/api/src/: app.rs  auth_chain.rs  bootstrap.rs  install_runtime.rs  lib.rs  logging.rs  main.rs  microsoft_auth.rs
apps/api/src/application/: accounts.rs  auth.rs  authority.rs  commands.rs  config.rs  content.rs  dev.rs  filesystem.rs  flags.rs  guardian_conversion.rs  install.rs  instances.rs  integrity.rs  integrity_scheduler.rs  java.rs  known_good.rs  launch.rs  mod.rs  music.rs  performance.rs  persisted_state_repair.rs  registered_artifact_recovery.rs  setup.rs  skin.rs  status.rs  telemetry.rs  timing.rs  update.rs  version.rs  whole_instance_rematerialization.rs
apps/api/src/dto/: loaders.rs
apps/api/src/execution/: anchored_record.rs  crash.rs  download.rs  file.rs  integrity.rs  jvm.rs  launch.rs  low_priority.rs  mod.rs  persistence.rs  process.rs  registered_artifact.rs  runtime.rs  user_owned_state.rs
apps/api/src/guardian/: artifact_descriptor.rs  artifact_repair.rs  component_rebuild.rs  copy.rs  decision_snapshot.rs  diagnosis.rs  directive.rs  facts.rs  healing.rs  inference_graph.rs  install_evidence.rs  integrity.rs  invariant_coverage.rs  jvm_preset.rs  launch_copy_snapshot.rs  launch_decision.rs  launch_decision_snapshot.rs  launch_failure_memory.rs  launch_recovery.rs  mod.rs  model.rs  outcome.rs  outcome_snapshot.rs  performance.rs  persisted_state_repair.rs  policy.rs  preflight.rs  preflight_copy_snapshot.rs  preflight_decision_snapshot.rs  projection_copy_snapshot.rs  reconciliation_journal.rs  repair_authorization.rs  repair_plan.rs  repair_terminal.rs  rules.rs  state_evidence.rs  tests.rs  whole_instance_rematerialization.rs
apps/api/src/interface/: mod.rs
apps/api/src/observability/: mod.rs  telemetry.rs
apps/api/src/routes/: accounts.rs  auth.rs  catalog.rs  config.rs  content.rs  dev.rs  flags.rs  install.rs  instances.rs  java.rs  launch.rs  loaders.rs  mod.rs  music.rs  performance.rs  setup.rs  skin.rs  status.rs  system.rs  telemetry.rs  update.rs  version_info.rs  versions.rs
apps/api/src/sse/: mod.rs
apps/api/src/state/: accounts.rs  auth_logins.rs  auth_persistence.rs  benchmark_suite_drivers.rs  benchmark_suites.rs  config.rs  contracts.rs  failure_memory.rs  installed_versions.rs  installs.rs  instance_deletions.rs  instance_lifecycle.rs  instance_registry.rs  integrity_activity.rs  java_probe_failures.rs  journals.rs  known_good.rs  known_good_rebuilds.rs  known_good_tier2.rs  launch_reports.rs  lifecycle.rs  managed_artifact_epoch.rs  mod.rs  music_cache.rs  ownership.rs  performance_managed.rs  performance_operations.rs  performance_rules.rs  persisted_state_load.rs  persisted_state_rejection_streaks.rs  persisted_state_repair.rs  presence.rs  reconciliation.rs  registered_artifact_findings.rs  remote_flags.rs  sessions.rs  setup_plans.rs  shutdown.rs  skins.rs  update_admission.rs  (+3 more)
apps/desktop/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/capabilities/: main.json
apps/desktop/icons/: icon.icns
apps/desktop/icons/dev/: icon.icns
apps/desktop/icons/macos/: icon.icns
apps/desktop/src/: main.rs  native_skin.rs  smoke.rs
apps/desktop/src/commands/: mod.rs
apps/desktop/src/discord_presence/: activity.rs  client.rs  client_id.rs  mod.rs  transport.rs  worker.rs
apps/desktop/src/events/: mod.rs
apps/desktop/src/state/: mod.rs
core/config/: Cargo.toml
core/config/src/: flags.rs  lib.rs  root.rs
core/config/src/instances/: mod.rs
core/config/src/models/: mod.rs
core/config/src/paths/: mod.rs
core/config/src/store/: mod.rs
core/content/: Cargo.toml
core/content/src/: error.rs  install.rs  lib.rs  managed_transaction.rs  manifest.rs  model.rs  pack.rs  provider.rs  registry.rs  resolver.rs  transaction.rs
core/content/src/modrinth/: dto.rs  mod.rs
core/content/tests/: live_modrinth.rs
core/fs/: Cargo.toml
core/fs/src/: lib.rs  platform.rs  transient.rs
core/launcher/: Cargo.toml
core/launcher/src/: crash.rs  failure.rs  lib.rs  readiness.rs
core/launcher/src/guardian/: mod.rs
core/launcher/src/healing/: mod.rs
core/launcher/src/jvm/: mod.rs
core/launcher/src/process/: mod.rs
core/launcher/src/profile/: mod.rs
core/launcher/src/runtime/: mod.rs
core/launcher/src/service/: healing.rs  mapping.rs  mod.rs  prepare.rs  validation.rs
core/launcher/src/session/: mod.rs
core/launcher/src/types/: mod.rs
core/minecraft/: Cargo.toml
core/minecraft/src/: artifact_path.rs  known_good.rs  known_good_libraries.rs  known_good_reconstruction.rs  lib.rs  lifecycle.rs  managed_blocking.rs  managed_component_ancestor_journal.rs  managed_component_cache.rs  managed_component_effects.rs  managed_component_lifecycle.rs  managed_component_publication.rs  managed_component_source_spool.rs  managed_component_spool.rs  managed_component_table.rs  managed_fs.rs  managed_libraries_publication.rs  managed_publication.rs  resource.rs  version_bundle_publication.rs
core/minecraft/src/download/: asset_source.rs  assets.rs  client.rs  content_transfer.rs  facts.rs  install.rs  integrity.rs  libraries.rs  library_source.rs  mod.rs  model.rs  path_safety.rs  plan.rs  promotion.rs  runtime.rs  tests.rs  transfer.rs  transfer_failure.rs  transient_transfer.rs
core/minecraft/src/integrity/: mod.rs
core/minecraft/src/java/: mod.rs
core/minecraft/src/launch/: mod.rs
core/minecraft/src/loaders/: api.rs  bound_processors.rs  compose.rs  forge_installer.rs  http.rs  install_flight.rs  installed_metadata.rs  managed_fs.rs  mod.rs  (+3 more)
core/performance/: Cargo.toml
core/performance/src/: catalog.json  effective.rs  file_identity.rs  lib.rs  rules_cache.rs  signature.rs  storage.rs
(+728 files in other folders)
