[workspace]
members = [
  "apps/api",
  "apps/desktop",
  "core/config",
  "core/launcher",
  "core/minecraft",
  "core/performance",
]
resolver = "3"

[workspace.package]
version = "0.4.0-alpha"
edition = "2024"
license = "MIT"
authors = ["Mateoltd"]

[workspace.dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.6", features = ["macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", default-features = true, features = ["clock"] }
ed25519-dalek = "2.2.0"
flate2 = "1.1.5"
futures-util = "0.3.32"
include_dir = "0.7.4"
lzma-rs = "0.3.0"
md5 = "0.8.0"
p256 = { version = "0.13.2", features = ["ecdsa"] }
png = "0.17.16"
rand = "0.8.5"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "http2", "gzip", "brotli", "deflate"] }
regex = "1.12.2"
self-replace = "1.5.0"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.9"
shlex = "1.3.0"
sysinfo = "0.37.2"
tar = "0.4.44"
tauri = { version = "2.9.3" }
tauri-build = { version = "2.5.1" }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-opener = "2.5.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
hex = "0.4.3"
