[package]
name = "croopor-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-stream.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
futures-util.workspace = true
include_dir.workspace = true
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
png.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
shlex.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
croopor-config = { path = "../../core/config" }
croopor-launcher = { path = "../../core/launcher" }
croopor-minecraft = { path = "../../core/minecraft" }
croopor-performance = { path = "../../core/performance" }

[dev-dependencies]
ed25519-dalek.workspace = true
hex.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading"] }
