[package]
name = "axial-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-stream.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
flate2.workspace = true
futures-util.workspace = true
include_dir.workspace = true
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
p256.workspace = true
png.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["blocking", "multipart"] }
self-replace.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
shlex.workspace = true
sysinfo.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
zip.workspace = true
axial-config = { path = "../../core/config" }
axial-launcher = { path = "../../core/launcher" }
axial-minecraft = { path = "../../core/minecraft" }
axial-performance = { path = "../../core/performance" }

[dev-dependencies]
ed25519-dalek.workspace = true
hex.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Threading"] }
