[package]
name = "axial-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-stream.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
flate2.workspace = true
futures-util.workspace = true
include_dir.workspace = true
http-body-util.workspace = true
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
p256.workspace = true
png.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["blocking", "multipart"] }
self-replace.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
shlex.workspace = true
sysinfo.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
zip.workspace = true
axial-config = { path = "../../core/config" }
axial-content = { path = "../../core/content" }
axial-launcher = { path = "../../core/launcher" }
axial-minecraft = { path = "../../core/minecraft" }
axial-performance = { path = "../../core/performance" }

[dev-dependencies]
axial-launcher = { path = "../../core/launcher", features = ["test-support"] }
axial-minecraft = { path = "../../core/minecraft", features = ["test-support"] }
ed25519-dalek.workspace = true
hex.workspace = true
static_assertions = "1.1.0"
tokio = { workspace = true, features = ["test-util"] }
zip.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Wdk_Foundation", "Wdk_Storage_FileSystem", "Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Threading"] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libc = "0.2.184"
