[package]
name = "axial-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build.workspace = true
serde_json.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-opener.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
uuid.workspace = true
libc.workspace = true
axial-api = { path = "../api", default-features = false }
axial-config = { path = "../../core/config" }
axial-performance = { path = "../../core/performance" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
