[package]
name = "axial-content"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
futures-util.workspace = true
hex.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
zip.workspace = true
axial-fs = { path = "../fs" }
axial-minecraft = { path = "../minecraft" }
