[package]
name = "axial-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
hex.workspace = true
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true
unicode-casefold.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
rustix = { version = "1.1.4", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
ntapi = "0.4.3"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
