[package]
name = "axial-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
test-support = ["axial-minecraft/test-support"]

[dependencies]
axial-minecraft = { path = "../minecraft" }
md5.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
zip.workspace = true

[dev-dependencies]
axial-minecraft = { path = "../minecraft", features = ["test-support"] }
tokio.workspace = true
