[package]
name = "axial-minecraft"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
futures-util.workspace = true
lzma-rs.workspace = true
md5.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
sysinfo.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
zip.workspace = true

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
