[package]
name = "axial-minecraft"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
test-support = []

[dependencies]
base64.workspace = true
chrono.workspace = true
futures-util.workspace = true
lzma-rs.workspace = true
md5.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
sysinfo.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
zip.workspace = true

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", features = ["fs", "process"] }

[target.'cfg(windows)'.dependencies]
ntapi = "0.4.3"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_JobObjects", "Win32_System_Threading"] }
