[package]
name = "axial-performance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axial-fs.workspace = true
axial-minecraft = { path = "../minecraft" }
chrono.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
hex.workspace = true
rand.workspace = true
reqwest.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
